--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "3.4.1",
     "fancybox": "3.5.7",
     "swiper": "4.5.0",
-    "wow": "wowjs#^1.1.2"
+    "wow": "wowjs#^1.1.2",
+    "image-map-resizer": "^1.0.10"
   }
 }
