--- a/config.json
+++ b/config.json
@@ -6,10 +6,11 @@
 			"src/fonts/**"
 		],
 		"js": [
+			"bower_components/swiper/dist/js/swiper.js",
 			"bower_components/wow/dist/wow.js",
 			"bower_components/jquery/dist/jquery.js",
-			"bower_components/swiper/dist/js/swiper.js",
-			"bower_components/fancybox/dist/jquery.fancybox.js"
+			"bower_components/fancybox/dist/jquery.fancybox.js",
+			"bower_components/image-map-resizer/js/imageMapResizer.js"
 		],
 		"css": [
 			"bower_components/wow/css/libs/animate.css",
