--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"node-sass": "^4.12.0",
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0"
+	},
+	"dependencies": {
+		"image-map-resizer": "^1.0.10"
 	}
 }
